# -*- mode: python -*-
# vi: set ft=python :

load("@pip_deps//:requirements.bzl", "requirement")
load("@drake//tools/lint:lint.bzl", "add_lint_tests")
load(
    "@drake//tools/skylark:py.bzl",
    "py_binary",
    "py_library",
    "py_test",
)

py_library(
    name = "scenario_helpers",
    srcs = ["scenario_helpers.py"],
    visibility = ["//visibility:public"],
    deps = [
        "@drake//bindings/pydrake",
    ],
)

py_library(
    name = "named_view_helpers",
    srcs = ["named_view_helpers.py"],
    visibility = ["//visibility:public"],
    deps = [
        "@drake//bindings/pydrake",
    ],
)

py_library(
    name = "box_flipup",
    srcs = ["envs/box_flipup/box_flipup.py"],
    data = [
        "//drake_gym/models",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":scenario_helpers",
        "//drake_gym",
        "@drake//bindings/pydrake",
        "@rules_python//python/runfiles",
    ],
)

py_library(
    name = "cart_pole",
    srcs = ["envs/cart_pole/cart_pole.py"],
    data = [
        "//drake_gym/models",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":named_view_helpers",
        ":scenario_helpers",
        "//drake_gym",
        "@drake//bindings/pydrake",
    ],
)

py_binary(
    name = "train_box_flipup",
    srcs = ["train_box_flipup.py"],
    data = [
        "//drake_gym/models",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//drake_gym",
        "//drake_gym/examples:box_flipup",
        requirement("stable-baselines3"),
        requirement("tensorboard"),
    ],
)

py_binary(
    name = "train_cart_pole",
    srcs = ["train_cart_pole.py"],
    data = [
        "//drake_gym/models",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//drake_gym",
        "//drake_gym/examples:cart_pole",
        requirement("stable-baselines3"),
        requirement("tensorboard"),
    ],
)

py_binary(
    name = "play_cart_pole",
    srcs = ["play_cart_pole.py"],
    data = [
        "//drake_gym/models",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//drake_gym",
        "//drake_gym/examples:cart_pole",
    ],
)

# Get some test coverage on the example; `--test` limits its time
# and CPU budget.
py_test(
    name = "train_box_flipup_test",
    srcs = ["train_box_flipup.py"],
    args = ["--test"],
    main = "train_box_flipup.py",
    deps = [
        "//drake_gym",
        "//drake_gym/examples:box_flipup",
    ],
)

py_test(
    name = "train_cart_pole_test",
    srcs = ["train_cart_pole.py"],
    args = ["--test"],
    main = "train_cart_pole.py",
    deps = [
        "//drake_gym",
        "//drake_gym/examples:cart_pole",
    ],
)

add_lint_tests()
